--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ main {
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
+
+.square {
+    justify-self: center;
+    font-size: calc(5rem + 1vw);
+}
