--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
     --btn-font-size: calc(1.5rem + 0.5vw);
 }
 
+body {
+    background-image: url(./img/background.svg);
+    background-size: cover;
+    animation: slide 60s linear infinite;
+}
+
 main {
     width: 100%;
     height: 80vh;
@@ -74,4 +80,13 @@ main {
 
 .win {
     display: none;
+}
+
+@keyframes slide {
+    0% {
+      background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% 100%;
+    }
 }
