--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 body {
     background-image: url(./img/background.svg);
-    background-size: cover;
+    background-size: contain;
     animation: slide 60s linear infinite;
 }
 
@@ -39,6 +39,7 @@ main {
 
 .start > h1 {
     font-size: calc(2.5rem + 1vw);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
 .start-button {
