Set button font to sans-serif

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
     border-radius: var(--btn-radius);
     font-size: var(--btn-font-size);
     background-color: var(--green);
-    font-family: inherit;
+    font-family: sans-serif;
 }
 
 .two-player-input {
