Set style for disabled start screen buttons

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ main {
     font-family: sans-serif;
 }
 
+.start-button[disabled] {
+    background-color: lightgray;
+}
+
 .two-player-input {
     display: none;
 }
