--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ main {
     font-size: calc(1rem + 1vw);
 }
 
-.two-player-input > input,
 .ai-input > input {
     width: 120%;
     height: 2rem;
@@ -79,8 +78,33 @@ main {
     padding: 0 5%;
 }
 
-#player-one-name {
-    margin-bottom: 1rem;
+.input {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+    padding: 0 7.5%;
+}
+
+#player-one-name,
+#player-two-name,
+#player-one-marker,
+#player-two-marker {
+    border: var(--btn-border);
+    border-radius: var(--btn-radius);
+    padding: 0 5%;
+}
+
+#player-one-name,
+#player-two-name {
+    width: 75%;
+    height: 1.75rem;
+
+}
+
+#player-one-marker,
+#player-two-marker {
+    width: 70%;
+    height: 2rem;
 }
 
 .two-player-start,
